# ollama-inquire

./: Cargo.toml  README.md
src/: main.rs  ollama.rs  utils.rs
