[package]
name = "ollama-inquire"
version = "1.0.2"
edition = "2021"
authors = [
  "Elijah Samson <https://github.com/obaraelijah> <elijahobara357@gmail.com>",
]
description = "Query any LLM found on Ollama from the terminal!"
readme = "README.md"
homepage = "https://crates.io/crates/ollama-inquire"
repository = "https://github.com/obaraelijah/ollama-inquire"
keywords = ["LLM", "Ollama", "AI", "Chatbot", "CLI"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "inquire"
path = "src/main.rs"

[dependencies]
spinners-rs = "2.3.0"

